// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`general info renders all props correctly as admin 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="chakra-toast-portal"
    >
      <ul
        id="chakra-toast-manager-top"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto;"
      />
      <ul
        id="chakra-toast-manager-top-left"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
      />
      <ul
        id="chakra-toast-manager-top-right"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
      />
      <ul
        id="chakra-toast-manager-bottom-left"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
      />
      <ul
        id="chakra-toast-manager-bottom"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto;"
      />
      <ul
        id="chakra-toast-manager-bottom-right"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
      />
    </div>
    <div>
      <div
        class="chakra-stack css-rtxd0z"
      >
        <div
          class="chakra-stack css-84zodg"
        >
          <h2
            class="chakra-heading css-0"
          >
            General Information
          </h2>
          <button
            class="chakra-button css-aab1vq"
            type="button"
          >
            Edit
          </button>
        </div>
        <hr
          aria-orientation="horizontal"
          class="chakra-divider css-1upb9tn"
        />
        <div
          class="css-1nfywic"
        >
          <div
            class="chakra-stack css-3w7d23"
          >
            <p
              class="chakra-text css-lnxk8v"
            >
              Name:
            </p>
            <p
              class="chakra-text css-lnxk8v"
            >
              Email:
            </p>
            <p
              class="chakra-text css-lnxk8v"
            >
              Phone:
            </p>
            <p
              class="chakra-text css-lnxk8v"
            >
              Joined:
            </p>
          </div>
          <div
            class="chakra-stack css-14nvnon"
          >
            <p
              class="chakra-text css-1tapsqs"
            >
              test member
            </p>
            <p
              class="chakra-text css-1tapsqs"
            >
              user@example.com
            </p>
            <p
              class="chakra-text css-1tapsqs"
            >
              1234
            </p>
            <p
              class="chakra-text css-1tapsqs"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="chakra-stack css-rtxd0z"
    >
      <div
        class="chakra-stack css-84zodg"
      >
        <h2
          class="chakra-heading css-0"
        >
          General Information
        </h2>
        <button
          class="chakra-button css-aab1vq"
          type="button"
        >
          Edit
        </button>
      </div>
      <hr
        aria-orientation="horizontal"
        class="chakra-divider css-1upb9tn"
      />
      <div
        class="css-1nfywic"
      >
        <div
          class="chakra-stack css-3w7d23"
        >
          <p
            class="chakra-text css-lnxk8v"
          >
            Name:
          </p>
          <p
            class="chakra-text css-lnxk8v"
          >
            Email:
          </p>
          <p
            class="chakra-text css-lnxk8v"
          >
            Phone:
          </p>
          <p
            class="chakra-text css-lnxk8v"
          >
            Joined:
          </p>
        </div>
        <div
          class="chakra-stack css-14nvnon"
        >
          <p
            class="chakra-text css-1tapsqs"
          >
            test member
          </p>
          <p
            class="chakra-text css-1tapsqs"
          >
            user@example.com
          </p>
          <p
            class="chakra-text css-1tapsqs"
          >
            1234
          </p>
          <p
            class="chakra-text css-1tapsqs"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`general info renders all props correctly as not admin 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="chakra-toast-portal"
    >
      <ul
        id="chakra-toast-manager-top"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto;"
      />
      <ul
        id="chakra-toast-manager-top-left"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
      />
      <ul
        id="chakra-toast-manager-top-right"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
      />
      <ul
        id="chakra-toast-manager-bottom-left"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
      />
      <ul
        id="chakra-toast-manager-bottom"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto;"
      />
      <ul
        id="chakra-toast-manager-bottom-right"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
      />
    </div>
    <div>
      <div
        class="chakra-stack css-rtxd0z"
      >
        <div
          class="chakra-stack css-84zodg"
        >
          <h2
            class="chakra-heading css-0"
          >
            General Information
          </h2>
        </div>
        <hr
          aria-orientation="horizontal"
          class="chakra-divider css-1upb9tn"
        />
        <div
          class="css-1nfywic"
        >
          <div
            class="chakra-stack css-3w7d23"
          >
            <p
              class="chakra-text css-lnxk8v"
            >
              Name:
            </p>
            <p
              class="chakra-text css-lnxk8v"
            >
              Email:
            </p>
            <p
              class="chakra-text css-lnxk8v"
            >
              Phone:
            </p>
            <p
              class="chakra-text css-lnxk8v"
            >
              Joined:
            </p>
          </div>
          <div
            class="chakra-stack css-14nvnon"
          >
            <p
              class="chakra-text css-1tapsqs"
            >
              test member
            </p>
            <p
              class="chakra-text css-1tapsqs"
            >
              user@example.com
            </p>
            <p
              class="chakra-text css-1tapsqs"
            >
              1234
            </p>
            <p
              class="chakra-text css-1tapsqs"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="chakra-stack css-rtxd0z"
    >
      <div
        class="chakra-stack css-84zodg"
      >
        <h2
          class="chakra-heading css-0"
        >
          General Information
        </h2>
      </div>
      <hr
        aria-orientation="horizontal"
        class="chakra-divider css-1upb9tn"
      />
      <div
        class="css-1nfywic"
      >
        <div
          class="chakra-stack css-3w7d23"
        >
          <p
            class="chakra-text css-lnxk8v"
          >
            Name:
          </p>
          <p
            class="chakra-text css-lnxk8v"
          >
            Email:
          </p>
          <p
            class="chakra-text css-lnxk8v"
          >
            Phone:
          </p>
          <p
            class="chakra-text css-lnxk8v"
          >
            Joined:
          </p>
        </div>
        <div
          class="chakra-stack css-14nvnon"
        >
          <p
            class="chakra-text css-1tapsqs"
          >
            test member
          </p>
          <p
            class="chakra-text css-1tapsqs"
          >
            user@example.com
          </p>
          <p
            class="chakra-text css-1tapsqs"
          >
            1234
          </p>
          <p
            class="chakra-text css-1tapsqs"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
